logs/timebook.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/timebook'...
Compiling './lib/python3.5/site-packages/timebook/cmdline.py'...
***   File "./lib/python3.5/site-packages/timebook/cmdline.py", line 84
    except NoMatch, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/timebook/cmdutil.py'...
***   File "./lib/python3.5/site-packages/timebook/cmdutil.py", line 61
    print ''.join(first_cols + [row[-1]])
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/timebook/commands.py'...
***   File "./lib/python3.5/site-packages/timebook/commands.py", line 129
    raise SystemExit, 'error: timesheet already active'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/timebook-1.2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
